# apps/server/ADWAIS/src/Api/DTOs/Tenants/Requests/UpdateTenantRequestDto.cs
@@ -7,6 +7,7 @@ public record UpdateTenantRequestDto
     public string? Name { get; init; }
     public TenantType? Type { get; init; }
     public string? LitiumBaseUrl { get; init; }
+    public string? OrderProvider { get; init; }
     public string? ImageUrl { get; init; }
     public string? ServiceAccountToken { get; init; }
     public bool? OrderFetchingEnabled { get; init; }
